--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 	<parent>
 		<groupId>io.xunyss</groupId>
 		<artifactId>pom</artifactId>
-		<version>1.0.0-RELEASE</version>
+		<version>1.0.0</version>
 	</parent>
 	<groupId>io.xunyss.localtunnel</groupId>
 	<artifactId>localtunnel</artifactId>
-	<version>1.1.1-RELEASE</version>
+	<version>1.0.0-RELEASE</version>
 	<packaging>jar</packaging>
 	
 	<name>localtunnel</name>
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>io.xunyss.commons</groupId>
 			<artifactId>commons-base</artifactId>
-			<version>0.9.1-RELEASE</version>
+			<version>1.0.0-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
